ChangeLog
=========

Release: 1.2.1
===============================================================================
2022-02-13 Adding G5 commands ^ABP, ^ADB, ^SOU, ^STP, ^TKP, ^PGE, ^PPA, ^PPF,
           ^PPG, ^PPK, ^PPM, ^PPN, ^PPT, ^PPX, ^UTF
           Expanded the ^BMP command to be compatible with G5.
           Adding G4 commands ^UNI
           Adding configuration options for SIP to configuration file.

2022-02-09 Fixes the border drawing.
           Fixes the button hang if the mouse moves during a mouse press.

Release: 1.2.0
===============================================================================
2022-02-06 Fixes the drawing of a bargraph with a button slider.
           Add the documentation for end users.

2022-02-01 Adds a slider button out of the system slider images.

Release: 1.1.3
===============================================================================
2022-01-22 Adds a new callback function to set a button visible or to hide it.

Release: 1.1.2
===============================================================================
2022-01-21 Adds the commands ^RFR, ^RAF.
           Improved the command ^BBR to immediately refreshing the button.
           Fixes the remote loading of images over a REST interface.
           Implements an image cache to speed up remote loading.

Release: 1.1.1
===============================================================================
2022-01-18 Fixes a bug when retriving images from a HTTP server.

2022-01-13 Fixes the restart after changing connection credentials or receiving
           a new surface.

Release: 1.1.0
===============================================================================
2022-01-02 Removes the dependency to asio and implements a new socket class
           instead.

2021-10-17 Adds new commands @SOU, ?BMP, ?BCT, ?BCB and ?BCF.

Release: <= 1.0.0
===============================================================================