@@ -3,6 +3,8 @@ ChangeLog
 
 Release: 1.2.1
 ===============================================================================
+2022-02-14 Adding command ^BMC, ?BOP
+
 2022-02-13 Adding G5 commands ^ABP, ^ADB, ^SOU, ^STP, ^TKP, ^PGE, ^PPA, ^PPF,
            ^PPG, ^PPK, ^PPM, ^PPN, ^PPT, ^PPX, ^UTF
            Expanded the ^BMP command to be compatible with G5.
